--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,6 @@
   "builds":[
     {"src":"*.js", "use":"@vercel/node"}
   ],
-  "routes": [{"src": "/(.*)", "dest":"/"}]
+  "routes": [{"src": "/(.*)", "dest":"/"}],
+  "rewrites": [{"src": "/(.*)", "dest":"/"}]
 }
