--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
-    "dependencies": {
-        "cors": "^2.8.5",
-        "dotenv": "^16.4.5",
-        "express": "^4.19.2",
-        "init": "^0.1.2",
-        "mongoose": "^8.5.2"
-    },
-    "scripts": {
+  "name": "backend-por",
+  "module": ".",
+  "type":"commonjs",
+  "devDependencies": {
+    "@types/bun": "latest"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "init": "^0.1.2",
+    "mongoose": "^8.5.4"
+  },
+  "scripts": {
         "start": "node index.js"
     }
 }
